//
// Licensed to the Apache Software Foundation (ASF) under one or more
// contributor license agreements.  See the NOTICE file distributed with
// this work for additional information regarding copyright ownership.
// The ASF licenses this file to You under the Apache License, Version 2.0
// (the "License"); you may not use this file except in compliance with
// the License.  You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package dubbo.mesh.v1alpha1;

import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/wrappers.proto";
import "proxy.proto";

option go_package = "/api/mesh/v1alpha1";

// MeshGlobalConfig defines mesh-wide settings for the Dubbo service mesh.
message MeshGlobalConfig {
  google.protobuf.Duration connect_timeout = 1;

  ProxyConfig default_config = 2;

  repeated ConfigSource config_sources = 3;

  string trust_domain = 4;

  repeated string trust_domain_aliases = 5;

  message CertificateData {
    oneof certificate_data {
      string pem = 1;
      string spiffe_bundle_url = 2;
    }
    repeated string cert_signers = 3;

    repeated string trust_domains = 4;
  }

  repeated CertificateData ca_certificates = 6;

  repeated string default_service_export_to = 7;

  repeated string default_virtual_service_export_to = 8;

  repeated string default_destination_rule_export_to = 9;

  string root_namespace = 10;

  google.protobuf.Duration dns_refresh_rate = 11;

  repeated Certificate certificates = 12 [deprecated = true];
}

message LabelSelector {
  // +optional
  map<string, string> matchLabels = 1;

  // +optional
  repeated LabelSelectorRequirement matchExpressions = 2;
}

message LabelSelectorRequirement {
  // +patchMergeKey=key
  // +patchStrategy=merge
  string key = 1;

  string operator = 2;

  // +optional
  repeated string values = 3;
}

message ConfigSource {
  string address = 1;
  // TLS settings removed - not needed for proxyless mesh
  // dubbo.networking.v1alpha3.ClientTLSSettings tls_settings = 2;
}

message Certificate {
  string secret_name = 1;
  repeated string dns_names = 2;
}
